# RBM

./: Metropolis.txt  README.md  correlation.txt
BM_try/: BM_mnist1.py  BM_mnist2.py  MNIST.py  class.py
C++/: 5_times_5_Metropolis.cpp  Ising.cpp  Ising.h  Metropolis.txt  Wolff.cpp  correlation.txt  correlation1.txt  debug.c  debug.cpp  exp.cpp  rigor.cpp
C++/data/: 100_times_100_Wolff.txt  2_times_2_Metropolis.txt  2_times_2_Metropolis_Cv.txt  2_times_2_Metropolis_E.txt  5_times_5_Metropolis.txt  5_times_5_Metropolis_Cv.txt  5_times_5_Wolff.txt  rigor_2_times_2_Cv.txt  rigor_2_times_2_E.txt  rigor_2_times_2_erglist.txt  rigor_5_times_5_Cv.txt  rigor_5_times_5_erglist.txt
MonteCarlo/FKmodel/: Bitflip_Data.xls  Bitflip_Data_Eig.xls  DATAgen_eig.py  FKmodel画图.opju  RBM.py  RBM_DATAgen.py  RBM_eig.py  RBM_improved1.py  RBM_improved2.py  Test.xls  Trained_weight_RMS.pth  Trained_weight_SGD.pth  Trained_weight_adam.pth  Trained_weight_momentum.pth  bitflip.py  bitflip_ACtime.py  bitflip_class.py  bitflip_noclass.py  plot_param.py  test_result_RMS.xls  test_result_SGD.xls  test_result_adam.xls  test_result_momentum.xls  xlwtTRY.py
MonteCarlo/FKmodel/CDmethod/: CD10_sample5000.txt  CD1_sample5000.txt  CD5_sample5000.txt  CDk.py  GD.py  Gibbs_interval_k10_S20.txt  Gibbs_interval_k_s20.txt  IsingSample.py  (+9 more)
MonteCarlo/Ising/: data.xlsx
MonteCarlo/RBM-master/src/spins/: CMakeLists.txt  ising.C  params.in  run.sh
MonteCarlo/restricted-boltzmann-machines-master/: rbm.py  rbmtest.py  rbmtest2.py
pygame/: try1.py
pytorch/: try1.py  try2.py  try3.py  try4.py  try5.py
(+892 files in other folders)
